--- a/Details.html
+++ b/Details.html
@@ -39,12 +39,12 @@
                   <a class="nav-link" href="./Home.html">HOME</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./Upcoming_Events.html"
+                  <a class="nav-link" href="./UpcomingEvents.html"
                     >UPCOMING EVENTS</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./Past_Events.html">PAST EVENTS</a>
+                  <a class="nav-link" href="./PastEvents.html">PAST EVENTS</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./Contact.html">CONTACT</a>
