--- a/UpcomingEvents.html
+++ b/UpcomingEvents.html
@@ -38,12 +38,12 @@
                 <a class="nav-link" href="./Home.html">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Upcoming_Events.html"
+                <a class="nav-link" href="./UpcomingEvents.html"
                   >UPCOMING EVENTS</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Past_Events.html">PAST EVENTS</a>
+                <a class="nav-link" href="./PastEvents.html">PAST EVENTS</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./Contact.html">CONTACT</a>
@@ -183,17 +183,53 @@
       <div class="container-fluid d-flex flex-wrap justify-content-center my-4">
         <div class="card">
           <img
-            src="./assets/music_concert.jpg"
-            class="card-img-top h-20"
-            alt="..."
+            src="./assets/marathon.jpg"
+            class="card-img-top h-50"
+            alt="marathon"
           />
           <div class="card-body">
-            <h5 class="card-title">Visita a la Zebras</h5>
+            <h5 class="card-title">10K for life</h5>
             <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. In,
-              amet.
+              "Come and exercise, improve your health and lifestyle."
             </p>
-            <a href="#" class="btn btn-primary">More Info</a>
+            <div class="d-flex justify-content-between align-items-center">
+              <span class="price">Price</span>
+              <a href="./Details.html" class="btn btn-primary">Details</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="./assets/books.jpg"
+            class="card-img-top h-50"
+            alt="books"
+          />
+          <div class="card-body">
+            <h5 class="card-title">School Book Fair</h5>
+            <p class="card-text">
+              "Bring your unused school book and bring the one you need."
+            </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <span class="price">Price</span>
+              <a href="./Details.html" class="btn btn-primary">Details</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="./assets/cinema.jpg"
+            class="card-img-top h-50"
+            alt="cinema"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Avengers</h5>
+            <p class="card-text">
+              "Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes"
+            </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <span class="price">Price</span>
+              <a href="./Details.html" class="btn btn-primary">Details</a>
+            </div>
           </div>
         </div>
         <div class="card">
@@ -203,42 +239,14 @@
             alt="..."
           />
           <div class="card-body">
-            <h5 class="card-title">Visita a la Zebras</h5>
+            <h5 class="card-title">Metallica in concert</h5>
             <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. In,
-              amet.
+              The only concert of the most emblematic band in the world
             </p>
-            <a href="#" class="btn btn-primary">More Info</a>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="./assets/music_concert.jpg"
-            class="card-img-top h-50"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">Visita a la Zebras</h5>
-            <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. In,
-              amet.
-            </p>
-            <a href="#" class="btn btn-primary">More Info</a>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="./assets/music_concert.jpg"
-            class="card-img-top h-50"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">Visita a la Zebras</h5>
-            <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. In,
-              amet.
-            </p>
-            <a href="#" class="btn btn-primary">More Info</a>
+            <div class="d-flex justify-content-between align-items-center">
+              <span class="price">Price</span>
+              <a href="./Details.html" class="btn btn-primary">Details</a>
+            </div>
           </div>
         </div>
       </div>
