--- a/Details.html
+++ b/Details.html
@@ -58,21 +58,25 @@
         </nav>
       </header>
         
-      <main class="container d-flex justify-content-center">
-        <div class="card mb-3">
+      <main class="container d-flex align-items-center custom-main">
+        <div class="d-flex justify-content-center ">
+          <div class="card mb-10 w-100">
             <div class="row g-0 d-flex align-items-center">
               <div class="col-md-6">
-                <img src="./assets/books.jpg" class="img-fluid rounded-start" alt="...">
+                <img src="./assets/books.jpg" class="img-fluid rounded-start custom-img" alt="books">
               </div>
               <div class="col-md-6">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                </div>
+                  <h5 class="card-title">Festival of the collectivities</h5>
+                  <p class="card-text">This is a wider </p>
+                  <p class="card-text">This is a wider </p>
+                  <p class="card-text">This is a wider </p>
+                  <p class="card-text">This is a wider </p>
               </div>
             </div>
           </div>
+        </div>
+
       </main>
 
       <footer class="footer">
