--- a/PastEvents.html
+++ b/PastEvents.html
@@ -183,62 +183,71 @@
       <div class="container-fluid d-flex flex-wrap justify-content-center my-4">
         <div class="card">
           <img
-            src="./assets/music_concert.jpg"
-            class="card-img-top h-20"
-            alt="..."
+            src="./assets/food_fair.jpg"
+            class="card-img-top h-50"
+            alt="foodfair"
           />
           <div class="card-body">
-            <h5 class="card-title">Visita a la Zebras</h5>
+            <h5 class="card-title">Festival of the collectivities</h5>
             <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. In,
-              amet.
+              Enjoy your favorite dishes from different countries in a unique event for the whole family.
             </p>
-            <a href="#" class="btn btn-primary">More Info</a>
+            <div class="d-flex justify-content-between align-items-center">
+              <span class="price">Price</span>
+              <a href="./Details.html" class="btn btn-primary">Details</a>
+            </div>
+            
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="./assets/outing_to_the_museum.jpg"
+            class="card-img-top h-50"
+            alt="outing_to_the_museum"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Art Exhibition</h5>
+            <p class="card-text">
+              Let's go to the art museum for an incredible tour to learn about the largest dinosaurs.
+            </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <span class="price">Price</span>
+              <a href="./Details.html" class="btn btn-primary">Details</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="./assets/costume_party.jpg"
+            class="card-img-top h-50"
+            alt="costume_party"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Halloween Night</h5>
+            <p class="card-text">
+              Come in your scariest costume character to win amazing prizes.
+            </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <span class="price">Price</span>
+              <a href="./Details.html" class="btn btn-primary">Details</a>
+            </div>
           </div>
         </div>
         <div class="card">
           <img
             src="./assets/music_concert.jpg"
             class="card-img-top h-50"
-            alt="..."
+            alt="music_concert"
           />
           <div class="card-body">
-            <h5 class="card-title">Visita a la Zebras</h5>
+            <h5 class="card-title">Metallica in concert</h5>
             <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. In,
-              amet.
+              "The only concert of the most emblematic band in the world
             </p>
-            <a href="#" class="btn btn-primary">More Info</a>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="./assets/music_concert.jpg"
-            class="card-img-top h-50"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">Visita a la Zebras</h5>
-            <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. In,
-              amet.
-            </p>
-            <a href="#" class="btn btn-primary">More Info</a>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="./assets/music_concert.jpg"
-            class="card-img-top h-50"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">Visita a la Zebras</h5>
-            <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. In,
-              amet.
-            </p>
-            <a href="#" class="btn btn-primary">More Info</a>
+            <div class="d-flex justify-content-between align-items-center">
+              <span class="price">Price</span>
+              <a href="./Details.html" class="btn btn-primary">Details</a>
+            </div>
           </div>
         </div>
       </div>
