--- a/PastEvents.html
+++ b/PastEvents.html
@@ -12,7 +12,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img
               src="./assets/amazing_brand.png"
               alt="Logo"
